test07/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test07
spec:
  replicas: 4
  selector:
    matchLabels:
      app: test07
  template:
    metadata:
      labels:
        app: test07
    spec:
      containers:
        - name: main
          image: dhltraining.azurecr.io/ondrejsika/training-example
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 10m
              memory: 4Mi
            limits:
              cpu: 20m
              memory: 8Mi
