test07/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: test07
spec:
  selector:
    app: test07
  ports:
    - port: 80
      targetPort: 8000
